Fix formatting on small screens. Show year in tooltip.

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -8,10 +8,9 @@ body {
 
 .custom-tooltip {
   padding: 1.35rem;
-  word-wrap: break-word;
   box-sizing: border-box;
-  width: 200px;
-  max-width: 100%;
+  width: 140px;
+  /* max-width: 100%;*/
   font-size: .775rem;
   pointer-events: auto;
   background-color: rgba(255,255,255,1);
@@ -20,4 +19,8 @@ body {
   box-shadow: 0 0.5rem 1rem rgb(0 0 0 / 15%);
   border-radius: .25rem;
   line-height: 0%;
+}
+
+.custom-tooltip dd {
+  text-align: right
 }
